# vibe-kanban-sm

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh  fly.toml  mcp-wrapper.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.sqlx/: query-0e51827057df2d9e78304623e44487109740a841bdab334bb8b43db60215ecb1.json  query-12faa9fd3f366142a7d970495a46103b689e07d1c185c42ae2eef4888d672de6.json  query-1515d2695cbb397f9e6775c317f3a89746df8908ac74bbc4bcbb1c1c2e3dfc45.json  query-17789c934ca49a04a85505f1a9c861a575ee8fa2e8b6c9e9f4fc177c09caa53d.json  query-1c7cf4645d1af1ca9406591fe9aa7b1ada91ee76534cf933f2b4e1f2c82a7624.json  query-1d84ba9ca8016f7b15d84acb3442c3b84ff344f666c31bb29223b6aaa440091f.json  query-1e9d7af285efea01dfd5f2f65ecc0335ebf0fbdab0393299a30678f7ae18bb5c.json  query-1eae64d51ea1d81c7239fc3640bb15bb59a51333602e7050bec3f5e8fc7fc782.json  query-2a7938884cc66eabb571da4f3e8567b8453f5ef2218c5ca3954b41c4e766859e.json  query-368d9be9608fea5002627625bf8abd3e9073e06bb72fc75f11c2af13f1d43a10.json  query-36c5a8a615185ada42a26fc0c1516e5e96d524abc8a1fa9b367a86b1ae73e014.json  query-3f47d57ea3971c7987a3c1a8e18c155568cddcb531fbb9e233ea7ebe08baee85.json  query-43c10bbafd851c362132fd0657eaef5e16eb58d847540b1d998a741996967643.json  query-46819da41b935666dc1cadd86a345ecd1b65882f2fbd8c3da39a7f6550f25262.json  query-4f2044112bb23e40b229804cfa535a6b631d95ff7b5596706711f76a50516b40.json  query-697001fc14562702ea84061e74bdcc6b9fbef679b8366ab46c1f629a633e9919.json  query-6c4d08764c41abb08c07ffda411d6a8e3456db56d9ea6c3d71f3554afc1dd213.json  (+25 more)
(+891 files in other folders)
