[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/db",
    "crates/executors",
    "crates/services",
    "crates/utils",
    "crates/local-deployment",
    "crates/deployment",
    "crates/remote",
    "crates/review"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
tower-http = { version = "0.5", features = ["cors", "request-id", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
openssl-sys = { version = "0.9", features = ["vendored"] }
thiserror = "2.0.12"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
schemars = { version = "1.0.4", features = ["derive", "chrono04", "uuid1", "preserve_order"] }
async-trait = "0.1"
regex = "1.10"

[profile.release]
debug = true
split-debuginfo = "packed"
strip = true
